# feotest-showcase-medical

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  dco.yml
docs/: INFORMATION-FOR-AUDITEES.md  INFORMATION-FOR-AUDITORS.md  SENTINEL-SELF-DIAGNOSIS.md
docs/articles/: README.md
field-baseline/: diagnostics_tumour_sensitivity-72b7-a08d-8f6e.yaml
fixtures/: README.md  reference-panel.csv  scores.csv
scripts/: make_reference_panel.py  regenerate_scores.py
src/: contract.rs  device.rs  fixtures.rs  lib.rs  main.rs  panel.rs  pathology.rs  scenarios.rs
