[package]
name = "feotest-showcase-medical"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A worked feotest showcase: statistically certifying a digital-pathology tumour-detection model against a clinical performance contract."
license = "Apache-2.0"
publish = false

[dependencies]
feotest = "0.1"
