[package]
name = "feotest-showcase-medical"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A worked feotest showcase: a diagnostic device as a stochastic service, characterised and then continuously verified through the measure-verify loop."
license = "Apache-2.0"
publish = false
# Two binaries: the `feotest-showcase-medical` CLI (src/main.rs) and the
# standalone field sentinel (src/bin/sentinel.rs). `cargo run` runs the CLI;
# `cargo run --bin sentinel` runs the self-diagnosis agent.
default-run = "feotest-showcase-medical"

[dependencies]
feotest = "0.1"
